# FreeCAD

./: .gitignore
cMake/FreeCAD_Helpers/: CompilerChecksAndSetups.cmake  InitializeFreeCADBuildOptions.cmake
src/Mod/: CMakeLists.txt
src/Mod/NomAnor/: CMakeLists.txt  Init.py  InitGui.py  NomAnor.dox  NomAnorGlobal.h
src/Mod/NomAnor/App/: AppNomAnor.cpp  CMakeLists.txt  Feature.cpp  Feature.h  FeatureBoolean.cpp  FeatureBoolean.h  FeatureExtrude.cpp  FeatureExtrude.h  FeaturePattern.cpp  FeaturePattern.h  FeaturePrimitive.cpp  FeaturePrimitive.h  FeatureToolShape.cpp  FeatureToolShape.h  FeatureToolShapes.cpp  FeatureToolShapes.h  PreCompiled.h
src/Mod/NomAnor/Gui/: AppNomAnorGui.cpp  CMakeLists.txt  Command.cpp  PreCompiled.h  Workbench.cpp  Workbench.h
src/Mod/NomAnor/Gui/Resources/: NomAnor.qrc
src/Mod/PartDesign/App/: FeatureTransformed.cpp
src/Mod/PartDesign/Gui/: AppPartDesignGui.cpp  Utils.h  Workbench.cpp
